# ml_engineering_sandbox

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
ml_pipelines/: __main__.py  data_gen_pipeline.py  eval_pipeline.py  train_pipeline.py
ml_pipelines/common/: dgp.py  feature_eng.py
ml_pipelines/core/eval/: eval.py
ml_pipelines/core/serve/: serve.py
ml_pipelines/deployment/aws/: eval.py  io.py  serve.py  train.py
ml_pipelines/deployment/common/: eval.py  serve.py  train.py
ml_pipelines/deployment/local/: common.py  eval.py  io.py  serve.py  train.py
ml_pipelines/eval/: eval.py
ml_pipelines/logic/common/: feature_eng.py  model.py
ml_pipelines/logic/eval/: eval.py
ml_pipelines/logic/serve/: serve.py
ml_pipelines/logic/train/: train.py
ml_pipelines/pipeline/: data_gen_pipeline.py  eval_pipeline.py  train_pipeline.py
ml_pipelines/serve/: serve.py
