[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml_pipelines"
version = "0.1.0"
description = "My nth attempt at making a demo MLOps project"
authors = ["Adrian Zuur <adrianzuur@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_pipelines"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
fastapi = "^0.108.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
typer = {extras = ["all"], version = "^0.9.0"}
uvicorn = {extras = ["standard"], version = "^0.26.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
mypy = "^1.8.0"
pytest = "^7.4.4"
python-dotenv = "^1.0.0"
pre-commit = "^3.6.0"
pandas-stubs = "^2.1.4.231227"
isort = "^5.13.2"

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
